--- a/WPF_Game/WPF_Game/Wpf_Game.csproj
+++ b/WPF_Game/WPF_Game/Wpf_Game.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="SplashScreen1.png" />
+  </ItemGroup>
+
 </Project>
